force-app/main/default/objects/LBR_Interactions__c/LBR_Interactions__c.object-meta.xml
<CustomObject>
    <description>Used to track LBR Interactions</description>
    <label>LBR Interactions</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>LBR Interactions Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LBR Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>