force-app/main/default/objects/LBR_Interactions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated to contact or lead.</description>
    <inlineHelpText>Account associated to contact or lead. This will be automatically populated.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Interactions must be linked to Offices only</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <infoMessage>Interactions must be linked to Offices only</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LBR Interactions</relationshipLabel>
    <relationshipName>LBR_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>