force-app/main/default/objects/LBR_Interactions__c/fields/ALM_Membership_Tier__c.field-meta.xml
<CustomField>
    <fullName>ALM_Membership_Tier__c</fullName>
    <label>ALM Membership Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCGE – Elite</fullName>
            </value>
            <value>
                <fullName>PCGE – Excellence</fullName>
            </value>
            <value>
                <fullName>PCGE - Non-Member Advisor</fullName>
            </value>
            <value>
                <fullName>PCGE - Rising Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>