force-app/main/default/objects/LBR_Interactions__c/fields/ALM_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>ALM_Membership_Type__c</fullName>
    <label>ALM Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCGE Lead Member</fullName>
            </value>
            <value>
                <fullName>PCGE Sub Member</fullName>
            </value>
            <value>
                <fullName>PCGE Member Marketing Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>