force-app/main/default/objects/LBR_Interactions__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact this interaction belongs to. Optional: an interaction references either a Contact or a Lead (enforced by Contact_or_Lead_Required). Converted from Master-Detail to Lookup for REV-68 so pre-conversion interactions can sit on a Lead.</description>
    <inlineHelpText>The Contact this interaction belongs to. Leave blank if the interaction is on a Lead.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LBR Interactions</relationshipLabel>
    <relationshipName>LBR_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>