force-app/main/default/objects/LBR_Interactions__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of Law Business Research interaction.</description>
    <inlineHelpText>End date of Law Business Research interaction.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>