force-app/main/default/objects/LBR_Interactions__c/fields/FO_Contact_Ref__c.field-meta.xml
<CustomField>
    <fullName>FO_Contact_Ref__c</fullName>
    <description>External FO reference for the Contact (10-digit integer). External Id for integration matching; not unique — the same contact ref repeats across interactions.</description>
    <externalId>true</externalId>
    <inlineHelpText>FO reference number for the Contact.</inlineHelpText>
    <label>FO Contact Ref</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>