force-app/main/default/objects/LBR_Interactions__c/fields/FO_Firm_Ref__c.field-meta.xml
<CustomField>
    <fullName>FO_Firm_Ref__c</fullName>
    <description>External FO reference for the Firm (10-digit integer). External Id for integration matching; not unique — the same firm ref repeats across interactions.</description>
    <externalId>true</externalId>
    <inlineHelpText>FO reference number for the Firm.</inlineHelpText>
    <label>FO Firm Ref</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>