force-app/main/default/objects/LBR_Interactions__c/fields/FO_Office_Ref__c.field-meta.xml
<CustomField>
    <fullName>FO_Office_Ref__c</fullName>
    <description>External FO reference for the Office (10-digit integer). External Id for integration matching; not unique — the same office ref repeats across interactions.</description>
    <externalId>true</externalId>
    <inlineHelpText>FO reference number for the Office.</inlineHelpText>
    <label>FO Office Ref</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>