force-app/main/default/objects/LBR_Interactions__c/fields/Interaction_Code__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Code__c</fullName>
    <description>External unique key for an interaction. Used to dedupe lead-side interactions against existing Contact interactions on conversion (REV-68).</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique external code for this interaction (case-insensitive).</inlineHelpText>
    <label>Interaction Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>