force-app/main/default/objects/LBR_Interactions__c/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <description>Date of internal interaction.</description>
    <inlineHelpText>Date of internal interaction.</inlineHelpText>
    <label>Interaction Date</label>
    <type>Date</type>
</CustomField>