force-app/main/default/objects/LBR_Interactions__c/fields/Interaction_Side__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Side__c</fullName>
    <description>"Lead" or "Contact" depending on which side this interaction sits on. Drives conditional field visibility on the record page (REV-68); reference fields can't be used in visibility rules directly.</description>
    <formula>IF(ISBLANK(Lead__c), "Contact", "Lead")</formula>
    <label>Interaction Side</label>
    <type>Text</type>
</CustomField>