force-app/main/default/objects/LBR_Interactions__c/fields/Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Status__c</fullName>
    <description>Status of Law Business Research interaction.</description>
    <inlineHelpText>Status of Law Business Research interaction.</inlineHelpText>
    <label>Interaction Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>