force-app/main/default/objects/LBR_Interactions__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <description>Law Business Research interaction type.</description>
    <inlineHelpText>Law Business Research interaction type.</inlineHelpText>
    <label>Interaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contributor</fullName>
            </value>
            <value>
                <fullName>Directory Listing</fullName>
            </value>
            <value>
                <fullName>Event Delegate</fullName>
            </value>
            <value>
                <fullName>Event Speaker</fullName>
            </value>
            <value>
                <fullName>Event Sponsor</fullName>
            </value>
            <value>
                <fullName>Library Contact</fullName>
            </value>
            <value>
                <fullName>Main Contact</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Power Based Mapping</fullName>
            </value>
            <value>
                <fullName>Ranked</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Subscriber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>