force-app/main/default/objects/LBR_Interactions__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <formula>IF(ISBLANK(Lead__c), TEXT(Contact__r.Job_Role__c), TEXT(Lead__r.Job_Role__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Role</label>
    <type>Text</type>
</CustomField>