force-app/main/default/objects/LBR_Interactions__c/fields/Laravel_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Laravel_User_ID__c</fullName>
    <description>Laravel user id from the source system (integer, no separators). The same id can appear on multiple interaction records.</description>
    <inlineHelpText>Laravel user id (integer value, no separators). The same id can appear on multiple interaction records.</inlineHelpText>
    <label>Laravel User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>