force-app/main/default/objects/LBR_Interactions__c/fields/Last_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Training_Date__c</fullName>
    <description>This filed is used to record User Training Date</description>
    <inlineHelpText>This filed is used to record User Training Date</inlineHelpText>
    <label>Last Training Date</label>
    <type>Date</type>
</CustomField>