force-app/main/default/objects/LBR_Interactions__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead this interaction belongs to before conversion. Cleared and replaced by Contact when the Lead is converted (REV-68).</description>
    <inlineHelpText>The Lead this interaction belongs to. Leave blank if the interaction is on a Contact.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LBR Interactions</relationshipLabel>
    <relationshipName>LBR_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>