force-app/main/default/objects/LBR_Interactions__c/fields/Mailing_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Sub_Region__c</fullName>
    <formula>IF(ISBLANK(Lead__c), Contact__r.Mailing_Sub_Region__c, Lead__r.Sub_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Sub Region</label>
    <type>Text</type>
</CustomField>