force-app/main/default/objects/LBR_Interactions__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Law Business Research interaction name.</description>
    <formula>Contact__r.FirstName &amp; &apos; &apos; &amp; Contact__r.LastName &amp; &apos; &apos; &amp; &apos;-&apos; &amp; &apos; &apos;&amp;  Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Law Business Research interaction name.</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>