force-app/main/default/objects/LBR_Interactions__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to link LBR interaction records with Opportunity</description>
    <inlineHelpText>This field is used to link LBR interaction records with Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LBR Interactions</relationshipLabel>
    <relationshipName>LBR_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>