force-app/main/default/objects/LBR_Interactions__c/fields/Pardot_Product__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Product__c</fullName>
    <description>Used in Pardot</description>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Pardot</inlineHelpText>
    <label>Pardot Product</label>
    <type>Text</type>
</CustomField>