force-app/main/default/objects/LBR_Interactions__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the product.</description>
    <inlineHelpText>Lookup to the product.</inlineHelpText>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>LBR Interactions</relationshipLabel>
    <relationshipName>LBR_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>