force-app/main/default/objects/LBR_Interactions__c/fields/Topic_Interests__c.field-meta.xml
<CustomField>
    <fullName>Topic_Interests__c</fullName>
    <description>Topic interests associated to products like GTDT, Lexology Info etc.</description>
    <inlineHelpText>Topic interests associated to products like GTDT, Lexology Info etc.</inlineHelpText>
    <label>Topic Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Arbitration &amp; ADR</fullName>
            </value>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Company &amp; Commercial</fullName>
            </value>
            <value>
                <fullName>Competition &amp; Antitrust</fullName>
            </value>
            <value>
                <fullName>Compliance Management</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Copyrights</fullName>
            </value>
            <value>
                <fullName>Corporate Finance/M&amp;A</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Derivatives</fullName>
            </value>
            <value>
                <fullName>Designs and trade secrets</fullName>
            </value>
            <value>
                <fullName>Employee Benefits &amp; Pensions</fullName>
            </value>
            <value>
                <fullName>Employment &amp; Labor</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Natural Resources</fullName>
            </value>
            <value>
                <fullName>Environment &amp; Climate Change</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Franchising</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>Human Rights</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Insolvency &amp; Restructuring</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Internet &amp; Social Media</fullName>
            </value>
            <value>
                <fullName>IT &amp; Data Protection</fullName>
            </value>
            <value>
                <fullName>Law Department Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>