force-app/main/default/objects/LBR_Interactions__c/fields/Ultimate_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically populated with the ultimate account</description>
    <inlineHelpText>Automatically populated with the ultimate account</inlineHelpText>
    <label>Ultimate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Office Interactions</relationshipLabel>
    <relationshipName>Child_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>