force-app/main/default/objects/LBR_Interactions__c/fields/User_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Training_Status__c</fullName>
    <description>This field is used to record User Training Status</description>
    <inlineHelpText>This field is used to record User Training Status</inlineHelpText>
    <label>User Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trained</fullName>
            </value>
            <value>
                <fullName>Not Trained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>