force-app/main/default/objects/LBR_Interactions__c/validationRules/Block_Converted_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Converted_Lead</fullName>
    <active>true</active>
    <description>Prevent linking an interaction to a Lead that has already been converted; the resulting Contact should be used instead (REV-68). Re-parenting clears Lead__c in the same DML, so this does not fire during conversion handling.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Lead__c)),
  Lead__r.IsConverted
)</errorConditionFormula>
    <errorDisplayField>Lead__c</errorDisplayField>
    <errorMessage>This Lead has already been converted. Link the interaction to the resulting Contact instead.</errorMessage>
</ValidationRule>