force-app/main/default/objects/LBR_Interactions__c/validationRules/Contact_or_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_or_Lead_Required</fullName>
    <active>true</active>
    <description>An LBR Interaction must reference exactly one of Contact or Lead — never neither, never both (REV-68).</description>
    <errorConditionFormula>OR(
  AND(ISBLANK(Contact__c), ISBLANK(Lead__c)),
  AND(NOT(ISBLANK(Contact__c)), NOT(ISBLANK(Lead__c)))
)</errorConditionFormula>
    <errorDisplayField>Lead__c</errorDisplayField>
    <errorMessage>An LBR Interaction must be linked to either a Contact or a Lead — not neither and not both.</errorMessage>
</ValidationRule>